// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModalDefault does not show the close button if \`shouldHideCloseButton\` is true 1`] = `
<ModalDefault
  heightAboveSmall="auto"
  isOpen={false}
  onCloseClick={[Function]}
  shouldCloseOnCurtainClick={true}
  shouldHideCloseButton={true}
  width="medium"
>
  <ModalDefaultAnimatedWrapper
    heightAboveSmall="auto"
    isOpen={false}
    onCloseClick={[Function]}
    shouldCloseOnCurtainClick={true}
    shouldPageScrollAboveSmall={true}
    width="medium"
  >
    <Transition
      in={false}
      timeout={
        Object {
          "enter": 300,
          "exit": 250,
        }
      }
    >
      <ModalCurtain
        accessibilityLabel="Modal"
        onCloseClick={[Function]}
        shouldCloseOnEscape={true}
        stage="exited"
      >
        <ConditionalPortal
          shouldDisplace={true}
        >
          <Portal
            containerInfo={
              <body>
                <div
                  aria-label="Modal"
                  role="dialog"
                  tabindex="-1"
                >
                  <div
                    class="root curtain"
                  >
                    <div
                      class="curtainInner curtainInnerShouldPageScrollAboveSmall"
                      data-test="thumbprint-modal-curtain"
                    >
                      <div
                        class="wrapper wrapperMedium wrapperShouldPageScrollAboveSmall"
                        data-test="thumbprint-modal-wrapper"
                      >
                        <div
                          class="container"
                          data-test="thumbprint-modal-container"
                        >
                          <div
                            class="contents"
                          >
                            <div
                              class="contentsPadding contentsPaddingNotSticky"
                            />
                          </div>
                          <div />
                          <div
                            class="closeButton closeButtonNotSticky"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </body>
            }
          >
            <div
              aria-label="Modal"
              role="dialog"
              tabIndex="-1"
            >
              <div
                className="root curtain"
              >
                <div
                  className="curtainInner curtainInnerShouldPageScrollAboveSmall"
                  data-test="thumbprint-modal-curtain"
                  onClick={[Function]}
                >
                  <div
                    className="wrapper wrapperMedium wrapperShouldPageScrollAboveSmall"
                    data-test="thumbprint-modal-wrapper"
                  >
                    <div
                      className="container"
                      data-test="thumbprint-modal-container"
                    >
                      <div
                        className="contents"
                      >
                        <div
                          className="contentsPadding contentsPaddingNotSticky"
                        />
                      </div>
                      <div />
                      <div
                        className="closeButton closeButtonNotSticky"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </Portal>
        </ConditionalPortal>
      </ModalCurtain>
    </Transition>
  </ModalDefaultAnimatedWrapper>
</ModalDefault>
`;

exports[`ModalDefault renders a basic modal 1`] = `
<ModalDefault
  heightAboveSmall="auto"
  isOpen={false}
  onCloseClick={[Function]}
  shouldCloseOnCurtainClick={true}
  shouldHideCloseButton={false}
  width="medium"
>
  <ModalDefaultAnimatedWrapper
    heightAboveSmall="auto"
    isOpen={false}
    onCloseClick={[Function]}
    shouldCloseOnCurtainClick={true}
    shouldPageScrollAboveSmall={true}
    width="medium"
  >
    <Transition
      in={false}
      timeout={
        Object {
          "enter": 300,
          "exit": 250,
        }
      }
    >
      <ModalCurtain
        accessibilityLabel="Modal"
        onCloseClick={[Function]}
        shouldCloseOnEscape={true}
        stage="exited"
      >
        <ConditionalPortal
          shouldDisplace={true}
        >
          <Portal
            containerInfo={
              <body>
                <div
                  aria-label="Modal"
                  role="dialog"
                  tabindex="-1"
                >
                  <div
                    class="root curtain"
                  >
                    <div
                      class="curtainInner curtainInnerShouldPageScrollAboveSmall"
                      data-test="thumbprint-modal-curtain"
                    >
                      <div
                        class="wrapper wrapperMedium wrapperShouldPageScrollAboveSmall"
                        data-test="thumbprint-modal-wrapper"
                      >
                        <div
                          class="container"
                          data-test="thumbprint-modal-container"
                        >
                          <div
                            class="contents"
                          >
                            <div
                              class="contentsPadding contentsPaddingNotSticky"
                            />
                          </div>
                          <div />
                          <div
                            class="closeButton closeButtonNotSticky"
                          >
                            <button
                              aria-label="Close modal"
                              class="plain plainThemeInherit"
                              type="button"
                            >
                              <span
                                class="flexCenter"
                              >
                                <svg
                                  class="closeButtonIcon"
                                  fill="currentColor"
                                  height="18"
                                  viewBox="0 0 18 18"
                                  width="18"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M9.014 7.6L4.771 3.357a1 1 0 1 0-1.414 1.414L7.6 9.014l-4.243 4.243a1 1 0 1 0 1.414 1.414l4.243-4.243 4.243 4.243a1 1 0 0 0 1.414-1.414l-4.243-4.243 4.243-4.243a1 1 0 0 0-1.414-1.414L9.014 7.6z"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </span>
                            </button>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </body>
            }
          >
            <div
              aria-label="Modal"
              role="dialog"
              tabIndex="-1"
            >
              <div
                className="root curtain"
              >
                <div
                  className="curtainInner curtainInnerShouldPageScrollAboveSmall"
                  data-test="thumbprint-modal-curtain"
                  onClick={[Function]}
                >
                  <div
                    className="wrapper wrapperMedium wrapperShouldPageScrollAboveSmall"
                    data-test="thumbprint-modal-wrapper"
                  >
                    <div
                      className="container"
                      data-test="thumbprint-modal-container"
                    >
                      <div
                        className="contents"
                      >
                        <div
                          className="contentsPadding contentsPaddingNotSticky"
                        />
                      </div>
                      <div />
                      <div
                        className="closeButton closeButtonNotSticky"
                      >
                        <ForwardRef
                          accessibilityLabel="Close modal"
                          iconLeft={
                            <NavigationCloseSmall
                              className="closeButtonIcon"
                              fill="currentColor"
                              height="18"
                              viewBox="0 0 18 18"
                              width="18"
                              xmlns="http://www.w3.org/2000/svg"
                            />
                          }
                          onClick={[Function]}
                          theme="inherit"
                        >
                          <ForwardRef
                            accessibilityLabel="Close modal"
                            iconLeft={
                              <NavigationCloseSmall
                                className="closeButtonIcon"
                                fill="currentColor"
                                height="18"
                                viewBox="0 0 18 18"
                                width="18"
                                xmlns="http://www.w3.org/2000/svg"
                              />
                            }
                            isDisabled={false}
                            onClick={[Function]}
                            theme="inherit"
                            type="button"
                          >
                            <button
                              aria-label="Close modal"
                              className="plain plainThemeInherit"
                              disabled={false}
                              onClick={[Function]}
                              type="button"
                            >
                              <span
                                className="flexCenter"
                              >
                                <NavigationCloseSmall
                                  className="closeButtonIcon"
                                  fill="currentColor"
                                  height="18"
                                  viewBox="0 0 18 18"
                                  width="18"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <svg
                                    className="closeButtonIcon"
                                    fill="currentColor"
                                    height="18"
                                    viewBox="0 0 18 18"
                                    width="18"
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <path
                                      d="M9.014 7.6L4.771 3.357a1 1 0 1 0-1.414 1.414L7.6 9.014l-4.243 4.243a1 1 0 1 0 1.414 1.414l4.243-4.243 4.243 4.243a1 1 0 0 0 1.414-1.414l-4.243-4.243 4.243-4.243a1 1 0 0 0-1.414-1.414L9.014 7.6z"
                                      fillRule="evenodd"
                                    />
                                  </svg>
                                </NavigationCloseSmall>
                              </span>
                            </button>
                          </ForwardRef>
                        </ForwardRef>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </Portal>
        </ConditionalPortal>
      </ModalCurtain>
    </Transition>
  </ModalDefaultAnimatedWrapper>
</ModalDefault>
`;

exports[`ModalDefault renders a basic modal with content 1`] = `
<ModalDefault
  heightAboveSmall="auto"
  isOpen={false}
  onCloseClick={[Function]}
  shouldCloseOnCurtainClick={true}
  shouldHideCloseButton={false}
  width="medium"
>
  <ModalDefaultAnimatedWrapper
    heightAboveSmall="auto"
    isOpen={false}
    onCloseClick={[Function]}
    shouldCloseOnCurtainClick={true}
    shouldPageScrollAboveSmall={true}
    width="medium"
  >
    <Transition
      in={false}
      timeout={
        Object {
          "enter": 300,
          "exit": 250,
        }
      }
    >
      <ModalCurtain
        accessibilityLabel="Modal"
        onCloseClick={[Function]}
        shouldCloseOnEscape={true}
        stage="exited"
      >
        <ConditionalPortal
          shouldDisplace={true}
        >
          <Portal
            containerInfo={
              <body>
                <div
                  aria-label="Modal"
                  role="dialog"
                  tabindex="-1"
                >
                  <div
                    class="root curtain"
                  >
                    <div
                      class="curtainInner curtainInnerShouldPageScrollAboveSmall"
                      data-test="thumbprint-modal-curtain"
                    >
                      <div
                        class="wrapper wrapperMedium wrapperShouldPageScrollAboveSmall"
                        data-test="thumbprint-modal-wrapper"
                      >
                        <div
                          class="container"
                          data-test="thumbprint-modal-container"
                        >
                          <div
                            class="contents"
                          >
                            <div
                              class="contentsPadding contentsPaddingNotSticky"
                            >
                              <p>
                                Hi there!
                              </p>
                              <button
                                type="button"
                              >
                                Submit
                              </button>
                            </div>
                          </div>
                          <div />
                          <div
                            class="closeButton closeButtonNotSticky"
                          >
                            <button
                              aria-label="Close modal"
                              class="plain plainThemeInherit"
                              type="button"
                            >
                              <span
                                class="flexCenter"
                              >
                                <svg
                                  class="closeButtonIcon"
                                  fill="currentColor"
                                  height="18"
                                  viewBox="0 0 18 18"
                                  width="18"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M9.014 7.6L4.771 3.357a1 1 0 1 0-1.414 1.414L7.6 9.014l-4.243 4.243a1 1 0 1 0 1.414 1.414l4.243-4.243 4.243 4.243a1 1 0 0 0 1.414-1.414l-4.243-4.243 4.243-4.243a1 1 0 0 0-1.414-1.414L9.014 7.6z"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </span>
                            </button>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </body>
            }
          >
            <div
              aria-label="Modal"
              role="dialog"
              tabIndex="-1"
            >
              <div
                className="root curtain"
              >
                <div
                  className="curtainInner curtainInnerShouldPageScrollAboveSmall"
                  data-test="thumbprint-modal-curtain"
                  onClick={[Function]}
                >
                  <div
                    className="wrapper wrapperMedium wrapperShouldPageScrollAboveSmall"
                    data-test="thumbprint-modal-wrapper"
                  >
                    <div
                      className="container"
                      data-test="thumbprint-modal-container"
                    >
                      <div
                        className="contents"
                      >
                        <div
                          className="contentsPadding contentsPaddingNotSticky"
                        >
                          <p>
                            Hi there!
                          </p>
                          <button
                            type="button"
                          >
                            Submit
                          </button>
                        </div>
                      </div>
                      <div />
                      <div
                        className="closeButton closeButtonNotSticky"
                      >
                        <ForwardRef
                          accessibilityLabel="Close modal"
                          iconLeft={
                            <NavigationCloseSmall
                              className="closeButtonIcon"
                              fill="currentColor"
                              height="18"
                              viewBox="0 0 18 18"
                              width="18"
                              xmlns="http://www.w3.org/2000/svg"
                            />
                          }
                          onClick={[Function]}
                          theme="inherit"
                        >
                          <ForwardRef
                            accessibilityLabel="Close modal"
                            iconLeft={
                              <NavigationCloseSmall
                                className="closeButtonIcon"
                                fill="currentColor"
                                height="18"
                                viewBox="0 0 18 18"
                                width="18"
                                xmlns="http://www.w3.org/2000/svg"
                              />
                            }
                            isDisabled={false}
                            onClick={[Function]}
                            theme="inherit"
                            type="button"
                          >
                            <button
                              aria-label="Close modal"
                              className="plain plainThemeInherit"
                              disabled={false}
                              onClick={[Function]}
                              type="button"
                            >
                              <span
                                className="flexCenter"
                              >
                                <NavigationCloseSmall
                                  className="closeButtonIcon"
                                  fill="currentColor"
                                  height="18"
                                  viewBox="0 0 18 18"
                                  width="18"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <svg
                                    className="closeButtonIcon"
                                    fill="currentColor"
                                    height="18"
                                    viewBox="0 0 18 18"
                                    width="18"
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <path
                                      d="M9.014 7.6L4.771 3.357a1 1 0 1 0-1.414 1.414L7.6 9.014l-4.243 4.243a1 1 0 1 0 1.414 1.414l4.243-4.243 4.243 4.243a1 1 0 0 0 1.414-1.414l-4.243-4.243 4.243-4.243a1 1 0 0 0-1.414-1.414L9.014 7.6z"
                                      fillRule="evenodd"
                                    />
                                  </svg>
                                </NavigationCloseSmall>
                              </span>
                            </button>
                          </ForwardRef>
                        </ForwardRef>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </Portal>
        </ConditionalPortal>
      </ModalCurtain>
    </Transition>
  </ModalDefaultAnimatedWrapper>
</ModalDefault>
`;

exports[`ModalDefault renders a medium height modal 1`] = `
<ModalDefault
  heightAboveSmall="medium"
  isOpen={true}
  onCloseClick={[Function]}
  shouldCloseOnCurtainClick={true}
  shouldHideCloseButton={false}
  width="medium"
>
  <ModalDefaultAnimatedWrapper
    heightAboveSmall="medium"
    isOpen={true}
    onCloseClick={[Function]}
    shouldCloseOnCurtainClick={true}
    shouldPageScrollAboveSmall={true}
    width="medium"
  >
    <Transition
      in={true}
      timeout={
        Object {
          "enter": 300,
          "exit": 250,
        }
      }
    >
      <ModalCurtain
        accessibilityLabel="Modal"
        onCloseClick={[Function]}
        shouldCloseOnEscape={true}
        stage="entered"
      >
        <ConditionalPortal
          shouldDisplace={true}
        >
          <Portal
            containerInfo={
              <body>
                <div
                  aria-label="Modal"
                  role="dialog"
                  tabindex="-1"
                >
                  <div
                    class="root rootOpen curtain curtainOpen"
                  >
                    <div
                      class="curtainInner curtainInnerShouldPageScrollAboveSmall"
                      data-test="thumbprint-modal-curtain"
                    >
                      <div
                        class="wrapper wrapperOpen wrapperMedium wrapperHeightMedium wrapperShouldPageScrollAboveSmall"
                        data-test="thumbprint-modal-wrapper"
                      >
                        <div
                          class="container"
                          data-test="thumbprint-modal-container"
                        >
                          <div
                            class="contents"
                          >
                            <div
                              class="contentsPadding contentsPaddingNotSticky"
                            />
                          </div>
                          <div />
                          <div
                            class="closeButton closeButtonNotSticky"
                          >
                            <button
                              aria-label="Close modal"
                              class="plain plainThemeInherit"
                              type="button"
                            >
                              <span
                                class="flexCenter"
                              >
                                <svg
                                  class="closeButtonIcon"
                                  fill="currentColor"
                                  height="18"
                                  viewBox="0 0 18 18"
                                  width="18"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M9.014 7.6L4.771 3.357a1 1 0 1 0-1.414 1.414L7.6 9.014l-4.243 4.243a1 1 0 1 0 1.414 1.414l4.243-4.243 4.243 4.243a1 1 0 0 0 1.414-1.414l-4.243-4.243 4.243-4.243a1 1 0 0 0-1.414-1.414L9.014 7.6z"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </span>
                            </button>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </body>
            }
          >
            <div
              aria-label="Modal"
              role="dialog"
              tabIndex="-1"
            >
              <NoScroll />
              <div
                className="root rootOpen curtain curtainOpen"
              >
                <div
                  className="curtainInner curtainInnerShouldPageScrollAboveSmall"
                  data-test="thumbprint-modal-curtain"
                  onClick={[Function]}
                >
                  <div
                    className="wrapper wrapperOpen wrapperMedium wrapperHeightMedium wrapperShouldPageScrollAboveSmall"
                    data-test="thumbprint-modal-wrapper"
                  >
                    <div
                      className="container"
                      data-test="thumbprint-modal-container"
                    >
                      <div
                        className="contents"
                      >
                        <div
                          className="contentsPadding contentsPaddingNotSticky"
                        />
                      </div>
                      <div />
                      <div
                        className="closeButton closeButtonNotSticky"
                      >
                        <ForwardRef
                          accessibilityLabel="Close modal"
                          iconLeft={
                            <NavigationCloseSmall
                              className="closeButtonIcon"
                              fill="currentColor"
                              height="18"
                              viewBox="0 0 18 18"
                              width="18"
                              xmlns="http://www.w3.org/2000/svg"
                            />
                          }
                          onClick={[Function]}
                          theme="inherit"
                        >
                          <ForwardRef
                            accessibilityLabel="Close modal"
                            iconLeft={
                              <NavigationCloseSmall
                                className="closeButtonIcon"
                                fill="currentColor"
                                height="18"
                                viewBox="0 0 18 18"
                                width="18"
                                xmlns="http://www.w3.org/2000/svg"
                              />
                            }
                            isDisabled={false}
                            onClick={[Function]}
                            theme="inherit"
                            type="button"
                          >
                            <button
                              aria-label="Close modal"
                              className="plain plainThemeInherit"
                              disabled={false}
                              onClick={[Function]}
                              type="button"
                            >
                              <span
                                className="flexCenter"
                              >
                                <NavigationCloseSmall
                                  className="closeButtonIcon"
                                  fill="currentColor"
                                  height="18"
                                  viewBox="0 0 18 18"
                                  width="18"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <svg
                                    className="closeButtonIcon"
                                    fill="currentColor"
                                    height="18"
                                    viewBox="0 0 18 18"
                                    width="18"
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <path
                                      d="M9.014 7.6L4.771 3.357a1 1 0 1 0-1.414 1.414L7.6 9.014l-4.243 4.243a1 1 0 1 0 1.414 1.414l4.243-4.243 4.243 4.243a1 1 0 0 0 1.414-1.414l-4.243-4.243 4.243-4.243a1 1 0 0 0-1.414-1.414L9.014 7.6z"
                                      fillRule="evenodd"
                                    />
                                  </svg>
                                </NavigationCloseSmall>
                              </span>
                            </button>
                          </ForwardRef>
                        </ForwardRef>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </Portal>
        </ConditionalPortal>
      </ModalCurtain>
    </Transition>
  </ModalDefaultAnimatedWrapper>
</ModalDefault>
`;

exports[`ModalDefault renders a narrow modal 1`] = `
<ModalDefault
  heightAboveSmall="auto"
  isOpen={false}
  onCloseClick={[Function]}
  shouldCloseOnCurtainClick={true}
  shouldHideCloseButton={false}
  width="narrow"
>
  <ModalDefaultAnimatedWrapper
    heightAboveSmall="auto"
    isOpen={false}
    onCloseClick={[Function]}
    shouldCloseOnCurtainClick={true}
    shouldPageScrollAboveSmall={true}
    width="narrow"
  >
    <Transition
      in={false}
      timeout={
        Object {
          "enter": 300,
          "exit": 250,
        }
      }
    >
      <ModalCurtain
        accessibilityLabel="Modal"
        onCloseClick={[Function]}
        shouldCloseOnEscape={true}
        stage="exited"
      >
        <ConditionalPortal
          shouldDisplace={true}
        >
          <Portal
            containerInfo={
              <body>
                <div
                  aria-label="Modal"
                  role="dialog"
                  tabindex="-1"
                >
                  <div
                    class="root curtain"
                  >
                    <div
                      class="curtainInner curtainInnerShouldPageScrollAboveSmall"
                      data-test="thumbprint-modal-curtain"
                    >
                      <div
                        class="wrapper wrapperNarrow wrapperShouldPageScrollAboveSmall"
                        data-test="thumbprint-modal-wrapper"
                      >
                        <div
                          class="container"
                          data-test="thumbprint-modal-container"
                        >
                          <div
                            class="contents"
                          >
                            <div
                              class="contentsPadding contentsPaddingNotSticky"
                            />
                          </div>
                          <div />
                          <div
                            class="closeButton closeButtonNotSticky"
                          >
                            <button
                              aria-label="Close modal"
                              class="plain plainThemeInherit"
                              type="button"
                            >
                              <span
                                class="flexCenter"
                              >
                                <svg
                                  class="closeButtonIcon"
                                  fill="currentColor"
                                  height="18"
                                  viewBox="0 0 18 18"
                                  width="18"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M9.014 7.6L4.771 3.357a1 1 0 1 0-1.414 1.414L7.6 9.014l-4.243 4.243a1 1 0 1 0 1.414 1.414l4.243-4.243 4.243 4.243a1 1 0 0 0 1.414-1.414l-4.243-4.243 4.243-4.243a1 1 0 0 0-1.414-1.414L9.014 7.6z"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </span>
                            </button>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </body>
            }
          >
            <div
              aria-label="Modal"
              role="dialog"
              tabIndex="-1"
            >
              <div
                className="root curtain"
              >
                <div
                  className="curtainInner curtainInnerShouldPageScrollAboveSmall"
                  data-test="thumbprint-modal-curtain"
                  onClick={[Function]}
                >
                  <div
                    className="wrapper wrapperNarrow wrapperShouldPageScrollAboveSmall"
                    data-test="thumbprint-modal-wrapper"
                  >
                    <div
                      className="container"
                      data-test="thumbprint-modal-container"
                    >
                      <div
                        className="contents"
                      >
                        <div
                          className="contentsPadding contentsPaddingNotSticky"
                        />
                      </div>
                      <div />
                      <div
                        className="closeButton closeButtonNotSticky"
                      >
                        <ForwardRef
                          accessibilityLabel="Close modal"
                          iconLeft={
                            <NavigationCloseSmall
                              className="closeButtonIcon"
                              fill="currentColor"
                              height="18"
                              viewBox="0 0 18 18"
                              width="18"
                              xmlns="http://www.w3.org/2000/svg"
                            />
                          }
                          onClick={[Function]}
                          theme="inherit"
                        >
                          <ForwardRef
                            accessibilityLabel="Close modal"
                            iconLeft={
                              <NavigationCloseSmall
                                className="closeButtonIcon"
                                fill="currentColor"
                                height="18"
                                viewBox="0 0 18 18"
                                width="18"
                                xmlns="http://www.w3.org/2000/svg"
                              />
                            }
                            isDisabled={false}
                            onClick={[Function]}
                            theme="inherit"
                            type="button"
                          >
                            <button
                              aria-label="Close modal"
                              className="plain plainThemeInherit"
                              disabled={false}
                              onClick={[Function]}
                              type="button"
                            >
                              <span
                                className="flexCenter"
                              >
                                <NavigationCloseSmall
                                  className="closeButtonIcon"
                                  fill="currentColor"
                                  height="18"
                                  viewBox="0 0 18 18"
                                  width="18"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <svg
                                    className="closeButtonIcon"
                                    fill="currentColor"
                                    height="18"
                                    viewBox="0 0 18 18"
                                    width="18"
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <path
                                      d="M9.014 7.6L4.771 3.357a1 1 0 1 0-1.414 1.414L7.6 9.014l-4.243 4.243a1 1 0 1 0 1.414 1.414l4.243-4.243 4.243 4.243a1 1 0 0 0 1.414-1.414l-4.243-4.243 4.243-4.243a1 1 0 0 0-1.414-1.414L9.014 7.6z"
                                      fillRule="evenodd"
                                    />
                                  </svg>
                                </NavigationCloseSmall>
                              </span>
                            </button>
                          </ForwardRef>
                        </ForwardRef>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </Portal>
        </ConditionalPortal>
      </ModalCurtain>
    </Transition>
  </ModalDefaultAnimatedWrapper>
</ModalDefault>
`;

exports[`ModalDefault renders a tall height modal 1`] = `
<ModalDefault
  heightAboveSmall="tall"
  isOpen={true}
  onCloseClick={[Function]}
  shouldCloseOnCurtainClick={true}
  shouldHideCloseButton={false}
  width="medium"
>
  <ModalDefaultAnimatedWrapper
    heightAboveSmall="tall"
    isOpen={true}
    onCloseClick={[Function]}
    shouldCloseOnCurtainClick={true}
    shouldPageScrollAboveSmall={true}
    width="medium"
  >
    <Transition
      in={true}
      timeout={
        Object {
          "enter": 300,
          "exit": 250,
        }
      }
    >
      <ModalCurtain
        accessibilityLabel="Modal"
        onCloseClick={[Function]}
        shouldCloseOnEscape={true}
        stage="entered"
      >
        <ConditionalPortal
          shouldDisplace={true}
        >
          <Portal
            containerInfo={
              <body>
                <div
                  aria-label="Modal"
                  role="dialog"
                  tabindex="-1"
                >
                  <div
                    class="root rootOpen curtain curtainOpen"
                  >
                    <div
                      class="curtainInner curtainInnerShouldPageScrollAboveSmall"
                      data-test="thumbprint-modal-curtain"
                    >
                      <div
                        class="wrapper wrapperOpen wrapperMedium wrapperHeightTall wrapperShouldPageScrollAboveSmall"
                        data-test="thumbprint-modal-wrapper"
                      >
                        <div
                          class="container"
                          data-test="thumbprint-modal-container"
                        >
                          <div
                            class="contents"
                          >
                            <div
                              class="contentsPadding contentsPaddingNotSticky"
                            />
                          </div>
                          <div />
                          <div
                            class="closeButton closeButtonNotSticky"
                          >
                            <button
                              aria-label="Close modal"
                              class="plain plainThemeInherit"
                              type="button"
                            >
                              <span
                                class="flexCenter"
                              >
                                <svg
                                  class="closeButtonIcon"
                                  fill="currentColor"
                                  height="18"
                                  viewBox="0 0 18 18"
                                  width="18"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M9.014 7.6L4.771 3.357a1 1 0 1 0-1.414 1.414L7.6 9.014l-4.243 4.243a1 1 0 1 0 1.414 1.414l4.243-4.243 4.243 4.243a1 1 0 0 0 1.414-1.414l-4.243-4.243 4.243-4.243a1 1 0 0 0-1.414-1.414L9.014 7.6z"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </span>
                            </button>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </body>
            }
          >
            <div
              aria-label="Modal"
              role="dialog"
              tabIndex="-1"
            >
              <NoScroll />
              <div
                className="root rootOpen curtain curtainOpen"
              >
                <div
                  className="curtainInner curtainInnerShouldPageScrollAboveSmall"
                  data-test="thumbprint-modal-curtain"
                  onClick={[Function]}
                >
                  <div
                    className="wrapper wrapperOpen wrapperMedium wrapperHeightTall wrapperShouldPageScrollAboveSmall"
                    data-test="thumbprint-modal-wrapper"
                  >
                    <div
                      className="container"
                      data-test="thumbprint-modal-container"
                    >
                      <div
                        className="contents"
                      >
                        <div
                          className="contentsPadding contentsPaddingNotSticky"
                        />
                      </div>
                      <div />
                      <div
                        className="closeButton closeButtonNotSticky"
                      >
                        <ForwardRef
                          accessibilityLabel="Close modal"
                          iconLeft={
                            <NavigationCloseSmall
                              className="closeButtonIcon"
                              fill="currentColor"
                              height="18"
                              viewBox="0 0 18 18"
                              width="18"
                              xmlns="http://www.w3.org/2000/svg"
                            />
                          }
                          onClick={[Function]}
                          theme="inherit"
                        >
                          <ForwardRef
                            accessibilityLabel="Close modal"
                            iconLeft={
                              <NavigationCloseSmall
                                className="closeButtonIcon"
                                fill="currentColor"
                                height="18"
                                viewBox="0 0 18 18"
                                width="18"
                                xmlns="http://www.w3.org/2000/svg"
                              />
                            }
                            isDisabled={false}
                            onClick={[Function]}
                            theme="inherit"
                            type="button"
                          >
                            <button
                              aria-label="Close modal"
                              className="plain plainThemeInherit"
                              disabled={false}
                              onClick={[Function]}
                              type="button"
                            >
                              <span
                                className="flexCenter"
                              >
                                <NavigationCloseSmall
                                  className="closeButtonIcon"
                                  fill="currentColor"
                                  height="18"
                                  viewBox="0 0 18 18"
                                  width="18"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <svg
                                    className="closeButtonIcon"
                                    fill="currentColor"
                                    height="18"
                                    viewBox="0 0 18 18"
                                    width="18"
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <path
                                      d="M9.014 7.6L4.771 3.357a1 1 0 1 0-1.414 1.414L7.6 9.014l-4.243 4.243a1 1 0 1 0 1.414 1.414l4.243-4.243 4.243 4.243a1 1 0 0 0 1.414-1.414l-4.243-4.243 4.243-4.243a1 1 0 0 0-1.414-1.414L9.014 7.6z"
                                      fillRule="evenodd"
                                    />
                                  </svg>
                                </NavigationCloseSmall>
                              </span>
                            </button>
                          </ForwardRef>
                        </ForwardRef>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </Portal>
        </ConditionalPortal>
      </ModalCurtain>
    </Transition>
  </ModalDefaultAnimatedWrapper>
</ModalDefault>
`;

exports[`ModalDefault renders a wide modal 1`] = `
<ModalDefault
  heightAboveSmall="auto"
  isOpen={false}
  onCloseClick={[Function]}
  shouldCloseOnCurtainClick={true}
  shouldHideCloseButton={false}
  width="wide"
>
  <ModalDefaultAnimatedWrapper
    heightAboveSmall="auto"
    isOpen={false}
    onCloseClick={[Function]}
    shouldCloseOnCurtainClick={true}
    shouldPageScrollAboveSmall={true}
    width="wide"
  >
    <Transition
      in={false}
      timeout={
        Object {
          "enter": 300,
          "exit": 250,
        }
      }
    >
      <ModalCurtain
        accessibilityLabel="Modal"
        onCloseClick={[Function]}
        shouldCloseOnEscape={true}
        stage="exited"
      >
        <ConditionalPortal
          shouldDisplace={true}
        >
          <Portal
            containerInfo={
              <body>
                <div
                  aria-label="Modal"
                  role="dialog"
                  tabindex="-1"
                >
                  <div
                    class="root curtain"
                  >
                    <div
                      class="curtainInner curtainInnerShouldPageScrollAboveSmall"
                      data-test="thumbprint-modal-curtain"
                    >
                      <div
                        class="wrapper wrapperWide wrapperShouldPageScrollAboveSmall"
                        data-test="thumbprint-modal-wrapper"
                      >
                        <div
                          class="container"
                          data-test="thumbprint-modal-container"
                        >
                          <div
                            class="contents"
                          >
                            <div
                              class="contentsPadding contentsPaddingNotSticky"
                            />
                          </div>
                          <div />
                          <div
                            class="closeButton closeButtonNotSticky"
                          >
                            <button
                              aria-label="Close modal"
                              class="plain plainThemeInherit"
                              type="button"
                            >
                              <span
                                class="flexCenter"
                              >
                                <svg
                                  class="closeButtonIcon"
                                  fill="currentColor"
                                  height="18"
                                  viewBox="0 0 18 18"
                                  width="18"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M9.014 7.6L4.771 3.357a1 1 0 1 0-1.414 1.414L7.6 9.014l-4.243 4.243a1 1 0 1 0 1.414 1.414l4.243-4.243 4.243 4.243a1 1 0 0 0 1.414-1.414l-4.243-4.243 4.243-4.243a1 1 0 0 0-1.414-1.414L9.014 7.6z"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </span>
                            </button>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </body>
            }
          >
            <div
              aria-label="Modal"
              role="dialog"
              tabIndex="-1"
            >
              <div
                className="root curtain"
              >
                <div
                  className="curtainInner curtainInnerShouldPageScrollAboveSmall"
                  data-test="thumbprint-modal-curtain"
                  onClick={[Function]}
                >
                  <div
                    className="wrapper wrapperWide wrapperShouldPageScrollAboveSmall"
                    data-test="thumbprint-modal-wrapper"
                  >
                    <div
                      className="container"
                      data-test="thumbprint-modal-container"
                    >
                      <div
                        className="contents"
                      >
                        <div
                          className="contentsPadding contentsPaddingNotSticky"
                        />
                      </div>
                      <div />
                      <div
                        className="closeButton closeButtonNotSticky"
                      >
                        <ForwardRef
                          accessibilityLabel="Close modal"
                          iconLeft={
                            <NavigationCloseSmall
                              className="closeButtonIcon"
                              fill="currentColor"
                              height="18"
                              viewBox="0 0 18 18"
                              width="18"
                              xmlns="http://www.w3.org/2000/svg"
                            />
                          }
                          onClick={[Function]}
                          theme="inherit"
                        >
                          <ForwardRef
                            accessibilityLabel="Close modal"
                            iconLeft={
                              <NavigationCloseSmall
                                className="closeButtonIcon"
                                fill="currentColor"
                                height="18"
                                viewBox="0 0 18 18"
                                width="18"
                                xmlns="http://www.w3.org/2000/svg"
                              />
                            }
                            isDisabled={false}
                            onClick={[Function]}
                            theme="inherit"
                            type="button"
                          >
                            <button
                              aria-label="Close modal"
                              className="plain plainThemeInherit"
                              disabled={false}
                              onClick={[Function]}
                              type="button"
                            >
                              <span
                                className="flexCenter"
                              >
                                <NavigationCloseSmall
                                  className="closeButtonIcon"
                                  fill="currentColor"
                                  height="18"
                                  viewBox="0 0 18 18"
                                  width="18"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <svg
                                    className="closeButtonIcon"
                                    fill="currentColor"
                                    height="18"
                                    viewBox="0 0 18 18"
                                    width="18"
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <path
                                      d="M9.014 7.6L4.771 3.357a1 1 0 1 0-1.414 1.414L7.6 9.014l-4.243 4.243a1 1 0 1 0 1.414 1.414l4.243-4.243 4.243 4.243a1 1 0 0 0 1.414-1.414l-4.243-4.243 4.243-4.243a1 1 0 0 0-1.414-1.414L9.014 7.6z"
                                      fillRule="evenodd"
                                    />
                                  </svg>
                                </NavigationCloseSmall>
                              </span>
                            </button>
                          </ForwardRef>
                        </ForwardRef>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </Portal>
        </ConditionalPortal>
      </ModalCurtain>
    </Transition>
  </ModalDefaultAnimatedWrapper>
</ModalDefault>
`;

exports[`ModalDefault shows the close button if \`shouldHideCloseButton\` is false 1`] = `
<ModalDefault
  heightAboveSmall="auto"
  isOpen={false}
  onCloseClick={[Function]}
  shouldCloseOnCurtainClick={true}
  shouldHideCloseButton={false}
  width="medium"
>
  <ModalDefaultAnimatedWrapper
    heightAboveSmall="auto"
    isOpen={false}
    onCloseClick={[Function]}
    shouldCloseOnCurtainClick={true}
    shouldPageScrollAboveSmall={true}
    width="medium"
  >
    <Transition
      in={false}
      timeout={
        Object {
          "enter": 300,
          "exit": 250,
        }
      }
    >
      <ModalCurtain
        accessibilityLabel="Modal"
        onCloseClick={[Function]}
        shouldCloseOnEscape={true}
        stage="exited"
      >
        <ConditionalPortal
          shouldDisplace={true}
        >
          <Portal
            containerInfo={
              <body>
                <div
                  aria-label="Modal"
                  role="dialog"
                  tabindex="-1"
                >
                  <div
                    class="root curtain"
                  >
                    <div
                      class="curtainInner curtainInnerShouldPageScrollAboveSmall"
                      data-test="thumbprint-modal-curtain"
                    >
                      <div
                        class="wrapper wrapperMedium wrapperShouldPageScrollAboveSmall"
                        data-test="thumbprint-modal-wrapper"
                      >
                        <div
                          class="container"
                          data-test="thumbprint-modal-container"
                        >
                          <div
                            class="contents"
                          >
                            <div
                              class="contentsPadding contentsPaddingNotSticky"
                            />
                          </div>
                          <div />
                          <div
                            class="closeButton closeButtonNotSticky"
                          >
                            <button
                              aria-label="Close modal"
                              class="plain plainThemeInherit"
                              type="button"
                            >
                              <span
                                class="flexCenter"
                              >
                                <svg
                                  class="closeButtonIcon"
                                  fill="currentColor"
                                  height="18"
                                  viewBox="0 0 18 18"
                                  width="18"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M9.014 7.6L4.771 3.357a1 1 0 1 0-1.414 1.414L7.6 9.014l-4.243 4.243a1 1 0 1 0 1.414 1.414l4.243-4.243 4.243 4.243a1 1 0 0 0 1.414-1.414l-4.243-4.243 4.243-4.243a1 1 0 0 0-1.414-1.414L9.014 7.6z"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </span>
                            </button>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </body>
            }
          >
            <div
              aria-label="Modal"
              role="dialog"
              tabIndex="-1"
            >
              <div
                className="root curtain"
              >
                <div
                  className="curtainInner curtainInnerShouldPageScrollAboveSmall"
                  data-test="thumbprint-modal-curtain"
                  onClick={[Function]}
                >
                  <div
                    className="wrapper wrapperMedium wrapperShouldPageScrollAboveSmall"
                    data-test="thumbprint-modal-wrapper"
                  >
                    <div
                      className="container"
                      data-test="thumbprint-modal-container"
                    >
                      <div
                        className="contents"
                      >
                        <div
                          className="contentsPadding contentsPaddingNotSticky"
                        />
                      </div>
                      <div />
                      <div
                        className="closeButton closeButtonNotSticky"
                      >
                        <ForwardRef
                          accessibilityLabel="Close modal"
                          iconLeft={
                            <NavigationCloseSmall
                              className="closeButtonIcon"
                              fill="currentColor"
                              height="18"
                              viewBox="0 0 18 18"
                              width="18"
                              xmlns="http://www.w3.org/2000/svg"
                            />
                          }
                          onClick={[Function]}
                          theme="inherit"
                        >
                          <ForwardRef
                            accessibilityLabel="Close modal"
                            iconLeft={
                              <NavigationCloseSmall
                                className="closeButtonIcon"
                                fill="currentColor"
                                height="18"
                                viewBox="0 0 18 18"
                                width="18"
                                xmlns="http://www.w3.org/2000/svg"
                              />
                            }
                            isDisabled={false}
                            onClick={[Function]}
                            theme="inherit"
                            type="button"
                          >
                            <button
                              aria-label="Close modal"
                              className="plain plainThemeInherit"
                              disabled={false}
                              onClick={[Function]}
                              type="button"
                            >
                              <span
                                className="flexCenter"
                              >
                                <NavigationCloseSmall
                                  className="closeButtonIcon"
                                  fill="currentColor"
                                  height="18"
                                  viewBox="0 0 18 18"
                                  width="18"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <svg
                                    className="closeButtonIcon"
                                    fill="currentColor"
                                    height="18"
                                    viewBox="0 0 18 18"
                                    width="18"
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <path
                                      d="M9.014 7.6L4.771 3.357a1 1 0 1 0-1.414 1.414L7.6 9.014l-4.243 4.243a1 1 0 1 0 1.414 1.414l4.243-4.243 4.243 4.243a1 1 0 0 0 1.414-1.414l-4.243-4.243 4.243-4.243a1 1 0 0 0-1.414-1.414L9.014 7.6z"
                                      fillRule="evenodd"
                                    />
                                  </svg>
                                </NavigationCloseSmall>
                              </span>
                            </button>
                          </ForwardRef>
                        </ForwardRef>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </Portal>
        </ConditionalPortal>
      </ModalCurtain>
    </Transition>
  </ModalDefaultAnimatedWrapper>
</ModalDefault>
`;

exports[`ModalDefaultContent renders contents 1`] = `
<ModalDefaultContent>
  <div
    className="modalContent"
  >
    Goose
  </div>
</ModalDefaultContent>
`;

exports[`ModalDefaultDescription renders a basic description 1`] = `
<ModalDefaultDescription>
  <div
    className="modalDescription"
  >
    Goose
  </div>
</ModalDefaultDescription>
`;

exports[`ModalDefaultFooter renders a non-sticky footer 1`] = `
<ModalDefaultFooter
  isSticky={false}
>
  <div
    className="modalFooterFluid"
  >
    Goose
  </div>
</ModalDefaultFooter>
`;

exports[`ModalDefaultFooter renders a sticky footer 1`] = `
<ModalDefault
  heightAboveSmall="auto"
  isOpen={false}
  onCloseClick={[Function]}
  shouldCloseOnCurtainClick={true}
  shouldHideCloseButton={false}
  width="medium"
>
  <ModalDefaultAnimatedWrapper
    heightAboveSmall="auto"
    isOpen={false}
    onCloseClick={[Function]}
    shouldCloseOnCurtainClick={true}
    shouldPageScrollAboveSmall={false}
    width="medium"
  >
    <Transition
      in={false}
      timeout={
        Object {
          "enter": 300,
          "exit": 250,
        }
      }
    >
      <ModalCurtain
        accessibilityLabel="Modal"
        onCloseClick={[Function]}
        shouldCloseOnEscape={true}
        stage="exited"
      >
        <ConditionalPortal
          shouldDisplace={true}
        >
          <Portal
            containerInfo={
              <body>
                <div
                  aria-label="Modal"
                  role="dialog"
                  tabindex="-1"
                >
                  <div
                    class="root curtain"
                  >
                    <div
                      class="curtainInner"
                      data-test="thumbprint-modal-curtain"
                    >
                      <div
                        class="wrapper wrapperMedium"
                        data-test="thumbprint-modal-wrapper"
                      >
                        <div
                          class="container"
                          data-test="thumbprint-modal-container"
                        >
                          <div
                            class="contents"
                          >
                            <div
                              class="contentsPadding"
                            />
                          </div>
                          <div>
                            <div
                              class="root"
                            >
                              Goose
                            </div>
                          </div>
                          <div
                            class="closeButton"
                          >
                            <button
                              aria-label="Close modal"
                              class="plain plainThemeInherit"
                              type="button"
                            >
                              <span
                                class="flexCenter"
                              >
                                <svg
                                  class="closeButtonIcon"
                                  fill="currentColor"
                                  height="18"
                                  viewBox="0 0 18 18"
                                  width="18"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M9.014 7.6L4.771 3.357a1 1 0 1 0-1.414 1.414L7.6 9.014l-4.243 4.243a1 1 0 1 0 1.414 1.414l4.243-4.243 4.243 4.243a1 1 0 0 0 1.414-1.414l-4.243-4.243 4.243-4.243a1 1 0 0 0-1.414-1.414L9.014 7.6z"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </span>
                            </button>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </body>
            }
          >
            <div
              aria-label="Modal"
              role="dialog"
              tabIndex="-1"
            >
              <div
                className="root curtain"
              >
                <div
                  className="curtainInner"
                  data-test="thumbprint-modal-curtain"
                  onClick={[Function]}
                >
                  <div
                    className="wrapper wrapperMedium"
                    data-test="thumbprint-modal-wrapper"
                  >
                    <div
                      className="container"
                      data-test="thumbprint-modal-container"
                    >
                      <div
                        className="contents"
                      >
                        <div
                          className="contentsPadding"
                        >
                          <ModalDefaultFooter
                            isSticky={true}
                          >
                            <Portal
                              containerInfo={
                                <div>
                                  <div
                                    class="root"
                                  >
                                    Goose
                                  </div>
                                </div>
                              }
                            >
                              <StickyFooter
                                setSticky={[Function]}
                              >
                                <div
                                  className="root"
                                >
                                  Goose
                                </div>
                              </StickyFooter>
                            </Portal>
                          </ModalDefaultFooter>
                        </div>
                      </div>
                      <div />
                      <div
                        className="closeButton"
                      >
                        <ForwardRef
                          accessibilityLabel="Close modal"
                          iconLeft={
                            <NavigationCloseSmall
                              className="closeButtonIcon"
                              fill="currentColor"
                              height="18"
                              viewBox="0 0 18 18"
                              width="18"
                              xmlns="http://www.w3.org/2000/svg"
                            />
                          }
                          onClick={[Function]}
                          theme="inherit"
                        >
                          <ForwardRef
                            accessibilityLabel="Close modal"
                            iconLeft={
                              <NavigationCloseSmall
                                className="closeButtonIcon"
                                fill="currentColor"
                                height="18"
                                viewBox="0 0 18 18"
                                width="18"
                                xmlns="http://www.w3.org/2000/svg"
                              />
                            }
                            isDisabled={false}
                            onClick={[Function]}
                            theme="inherit"
                            type="button"
                          >
                            <button
                              aria-label="Close modal"
                              className="plain plainThemeInherit"
                              disabled={false}
                              onClick={[Function]}
                              type="button"
                            >
                              <span
                                className="flexCenter"
                              >
                                <NavigationCloseSmall
                                  className="closeButtonIcon"
                                  fill="currentColor"
                                  height="18"
                                  viewBox="0 0 18 18"
                                  width="18"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <svg
                                    className="closeButtonIcon"
                                    fill="currentColor"
                                    height="18"
                                    viewBox="0 0 18 18"
                                    width="18"
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <path
                                      d="M9.014 7.6L4.771 3.357a1 1 0 1 0-1.414 1.414L7.6 9.014l-4.243 4.243a1 1 0 1 0 1.414 1.414l4.243-4.243 4.243 4.243a1 1 0 0 0 1.414-1.414l-4.243-4.243 4.243-4.243a1 1 0 0 0-1.414-1.414L9.014 7.6z"
                                      fillRule="evenodd"
                                    />
                                  </svg>
                                </NavigationCloseSmall>
                              </span>
                            </button>
                          </ForwardRef>
                        </ForwardRef>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </Portal>
        </ConditionalPortal>
      </ModalCurtain>
    </Transition>
  </ModalDefaultAnimatedWrapper>
</ModalDefault>
`;

exports[`ModalDefaultHeader renders a basic header 1`] = `
<ModalDefaultHeader>
  <div
    className="modalHeader"
  >
    Goose
  </div>
</ModalDefaultHeader>
`;

exports[`ModalDefaultTitle renders a basic title 1`] = `
<ModalDefaultTitle>
  <div
    className="modalTitle"
  >
    Goose
  </div>
</ModalDefaultTitle>
`;
